[package]
name = "logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.70"
async-trait = "0.1.68"
log = { version = "0.4", features =["std"] }
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
crossbeam = "0.8.2"
